--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
+        activity_version = '1.1.0'
+        coroutines_version = '1.4.2'
+        lifecycle_version = '2.3.1'
         appcompat_version = "1.2.0"
         constraintlayout_version = "2.0.2"
         core_ktx_version = "1.3.2"
-        kotlin_version = "1.3.72"
-        material_version = "1.2.1"
-        nav_version = "2.3.1"
+        kotlin_version = "1.5.0"
+        material_version = "1.3.0"
+        nav_version = "2.3.5"
+        room_version = '2.3.0'
     }
     ext.kotlin_version = "1.5.10"
     repositories {
