--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,8 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-
+        // Use vector drawables on API below 21
+        vectorDrawables.useSupportLibrary = true
         //testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
     }
