--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
         core_ktx_version = "1.3.2"
         kotlin_version = "1.5.0"
         material_version = "1.3.0"
-        nav_version = "2.3.5"
+        nav_version = "2.4.0-alpha06"
         room_version = '2.3.0'
     }
     ext.kotlin_version = "1.5.10"
@@ -19,7 +19,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.0'
+        classpath 'com.android.tools.build:gradle:7.0.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.30"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
 
